Fixed background overflow

--- a/css/binary.css
+++ b/css/binary.css
@@ -1,5 +1,5 @@
 .galaxy-header {
-    position: fixed; /* Change from absolute */
+    position: absolute; 
     top: 0;
     left: 0;
     width: 100%;
